<resources>
    <string name="app_name">Cy Express</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cy Express</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
