<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </group>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/unlock"
                android:title="@string/menu_log_out" />

        </menu>
    </item>

</menu>
